--- a/app/src/main/res/layout/activity_cus_view.xml
+++ b/app/src/main/res/layout/activity_cus_view.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".orders">
+    tools:context=".cus_view">
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
@@ -22,14 +22,14 @@
             android:layout_marginVertical="70dp"
             android:layout_marginHorizontal="10dp"
             android:background="@color/colortextview"
-            android:collapseColumns="1,2,3,4,6">
+            android:collapseColumns="1,2,3,5,6">
 
             <TableRow>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column9"
+                    android:text="@string/txt3"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -38,7 +38,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column10"
+                    android:text="@string/txt4"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -47,7 +47,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column11"
+                    android:text="@string/txt5"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -56,7 +56,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="@string/txt6"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -65,7 +65,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column12"
+                    android:text="@string/txt7"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -74,7 +74,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column13"
+                    android:text="@string/txt8"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -83,12 +83,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column14"
+                    android:text="@string/txt10"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp" />
+                    android:layout_marginRight="100dp"/>
 
 
             </TableRow>
@@ -97,7 +97,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/txt3"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -106,7 +106,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/txt4"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -115,7 +115,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="@string/txt5"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -124,7 +124,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/txt6"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -133,7 +133,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/txt7"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -142,7 +142,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column13"
+                    android:text="@string/txt8"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -151,13 +151,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column14"
+                    android:text="@string/txt10"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
                     android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"
-                    android:onClick="editOrder"/>
+                    android:layout_marginBottom="1dp"/>
 
 
 
@@ -168,7 +167,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/txt3"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -177,7 +176,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/txt4"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -186,7 +185,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="@string/txt5"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -195,7 +194,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/txt6"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -204,7 +203,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/txt7"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -213,7 +212,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column14"
+                    android:text="@string/txt8"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -222,13 +221,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column14"
+                    android:text="@string/txt10"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
                     android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"
-                    android:onClick="editOrder"/>
+                    android:layout_marginBottom="1dp"/>
 
             </TableRow>
 
@@ -237,21 +235,7 @@
         </TableLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </HorizontalScrollView>/
+    </HorizontalScrollView>
 
     <Button
         android:id="@+id/switchBtn"
@@ -263,6 +247,7 @@
         android:background="@drawable/addbutton"
         />
 
+
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -271,7 +256,5 @@
         android:background="@drawable/button_corner"
         android:text="@string/backDash"
         android:onClick="backDashboard" />
-
-
 
 </LinearLayout>
