--- a/app/src/main/res/layout/activity_manager_employee.xml
+++ b/app/src/main/res/layout/activity_manager_employee.xml
@@ -23,7 +23,7 @@
                 android:layout_marginVertical="70dp"
                 android:layout_marginHorizontal="10dp"
                 android:background="@color/colortextview"
-                android:collapseColumns="1,3,4,5,6,7">
+                android:collapseColumns="1,3,4,5,6,7,8">
 
                 <TableRow>
 
@@ -99,6 +99,15 @@
                         android:gravity="center"
                         android:layout_marginLeft="100dp"
                         android:layout_marginRight="100dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btn9"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:layout_marginLeft="100dp"
+                        android:layout_marginRight="100dp"/>
 
                 </TableRow>
                 <TableRow>
@@ -175,6 +184,16 @@
                         android:background="@color/cardview_light_background"
                         android:layout_marginRight="1dp"
                         android:layout_marginBottom="1dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btn9"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@color/cardview_light_background"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginRight="1dp"/>
 
 
 
@@ -208,7 +227,7 @@
                         android:gravity="center"
                         android:background="@color/cardview_light_background"
                         android:layout_marginRight="1dp"
-                        android:layout_marginBottom="1dp"/>/>
+                        android:layout_marginBottom="1dp"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -254,6 +273,16 @@
                         android:background="@color/cardview_light_background"
                         android:layout_marginRight="1dp"
                         android:layout_marginBottom="1dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/btn9"
+                        android:textStyle="bold"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:background="@color/cardview_light_background"
+                        android:layout_marginLeft="1dp"
+                        android:layout_marginRight="1dp"/>
 
                 </TableRow>
 
@@ -287,5 +316,14 @@
         android:text="@string/btn5"
         android:background="@drawable/addbutton"
         />
+
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/button_corner"
+        android:text="@string/backDash"
+        android:onClick="backDashboard" />
 
 </LinearLayout>
