--- a/app/src/main/res/layout/activity_product_remove.xml
+++ b/app/src/main/res/layout/activity_product_remove.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".orders">
+    tools:context=".product_remove">
+
+
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
@@ -22,14 +24,14 @@
             android:layout_marginVertical="70dp"
             android:layout_marginHorizontal="10dp"
             android:background="@color/colortextview"
-            android:collapseColumns="1,2,3,4,6">
+            android:collapseColumns="1,2,3">
 
             <TableRow>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column9"
+                    android:text="@string/col1"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -38,7 +40,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column10"
+                    android:text="@string/col2"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -47,7 +49,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column11"
+                    android:text="@string/col3"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
@@ -56,39 +58,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="DELETE"
                     android:textStyle="bold"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_marginLeft="100dp"
                     android:layout_marginRight="100dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column12"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column13"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column14"
-                    android:textStyle="bold"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:layout_marginLeft="100dp"
-                    android:layout_marginRight="100dp" />
+
 
 
             </TableRow>
@@ -97,7 +73,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/col1"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -106,7 +82,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/col2"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -115,7 +91,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="@string/col3"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -124,40 +100,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="DELETE"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
                     android:layout_marginBottom="1dp"
                     android:layout_marginHorizontal="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column2"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column13"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column14"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"
-                    android:onClick="editOrder"/>
+
 
 
 
@@ -168,7 +117,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
+                    android:text="@string/col1"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -177,7 +126,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="@string/col2"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -186,7 +135,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column3"
+                    android:text="@string/col3"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
@@ -195,40 +144,13 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/column1"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginBottom="1dp"
-                    android:layout_marginHorizontal="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column2"
+                    android:text="DELETE"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:background="@color/cardview_light_background"
                     android:layout_marginRight="1dp"
                     android:layout_marginBottom="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column14"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/column14"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:background="@color/cardview_light_background"
-                    android:layout_marginRight="1dp"
-                    android:layout_marginBottom="1dp"
-                    android:onClick="editOrder"/>
+
 
             </TableRow>
 
@@ -251,17 +173,17 @@
 
 
 
-    </HorizontalScrollView>/
+    </HorizontalScrollView>
 
     <Button
         android:id="@+id/switchBtn"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:onClick="collapseTable"
-        android:text="SHOW DETAILS"
-        android:background="@drawable/addbutton"
-        />
+        android:background="@drawable/cart_corner"
+        android:text="@string/btn5" />
+
 
     <Button
         android:layout_width="200dp"
@@ -269,8 +191,10 @@
         android:layout_gravity="end"
         android:layout_marginTop="100dp"
         android:background="@drawable/button_corner"
-        android:text="@string/backDash"
-        android:onClick="backDashboard" />
+        android:onClick="backDashboard"
+        android:text="@string/backDash" />
+
+
 
 
 
