--- a/app/src/main/res/layout/activity_delivery_report.xml
+++ b/app/src/main/res/layout/activity_delivery_report.xml
@@ -56,7 +56,7 @@
     <TextView
         android:id="@+id/textView13"
         android:layout_width="105dp"
-        android:layout_height="33dp"
+        android:layout_height="63dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
@@ -133,6 +133,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.44" />
