--- a/app/src/main/res/layout/activity_on_board.xml
+++ b/app/src/main/res/layout/activity_on_board.xml
@@ -45,9 +45,10 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
-        android:text="@string/start"
         android:layout_marginTop="450dp"
-        android:background="@drawable/button_corner"/>
+        android:background="@drawable/button_corner"
+        android:text="@string/start"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
