--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -268,6 +268,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:layout_marginTop="100dp"
+        android:layout_marginRight="98dp"
         android:background="@drawable/button_corner"
         android:text="@string/backDash"
         android:onClick="backDashboard" />
